; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_x86emuOp_pushf_word.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_x86emuOp_pushf_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.x86emu = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@F_MSK = common dso_local global i32 0, align 4
@F_ALWAYS_ON = common dso_local global i32 0, align 4
@SYSMODE_PREFIX_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.x86emu*)* @x86emuOp_pushf_word to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @x86emuOp_pushf_word(%struct.x86emu* %0) #0 {
  %2 = alloca %struct.x86emu*, align 8
  %3 = alloca i32, align 4
  store %struct.x86emu* %0, %struct.x86emu** %2, align 8
  %4 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %5 = getelementptr inbounds %struct.x86emu, %struct.x86emu* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @F_MSK, align 4
  %9 = and i32 %7, %8
  %10 = load i32, i32* @F_ALWAYS_ON, align 4
  %11 = or i32 %9, %10
  store i32 %11, i32* %3, align 4
  %12 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %13 = getelementptr inbounds %struct.x86emu, %struct.x86emu* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @SYSMODE_PREFIX_DATA, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %1
  %20 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @push_long(%struct.x86emu* %20, i32 %21)
  br label %27

23:                                               ; preds = %1
  %24 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %25 = load i32, i32* %3, align 4
  %26 = call i32 @push_word(%struct.x86emu* %24, i32 %25)
  br label %27

27:                                               ; preds = %23, %19
  ret void
}

declare dso_local i32 @push_long(%struct.x86emu*, i32) #1

declare dso_local i32 @push_word(%struct.x86emu*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
